[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/press-start-2p/PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Menu/button_3.png" type="Texture" id=3]
[ext_resource path="res://assets/Menu/button_1.png" type="Texture" id=4]
[ext_resource path="res://assets/Menu/button_4.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 8 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 8 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 32, 8 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 8 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 8 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 32, 8 )

[node name="pause_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VboxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -50.0
margin_right = 120.0
margin_bottom = 100.0

[node name="Resume_button" type="Button" parent="VboxContainer"]
margin_right = 240.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Resume"

[node name="Settings_button" type="Button" parent="VboxContainer"]
margin_top = 51.0
margin_right = 240.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Settings"

[node name="Menu_button" type="Button" parent="VboxContainer"]
margin_top = 102.0
margin_right = 240.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Main Menu"

[node name="Timer" type="Timer" parent="."]
wait_time = 17.152

[node name="Menu_Timer" type="Timer" parent="."]

[connection signal="pressed" from="VboxContainer/Resume_button" to="." method="_on_Resume_button_pressed"]
[connection signal="pressed" from="VboxContainer/Menu_button" to="." method="_on_Menu_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Menu_Timer" to="." method="_on_Menu_Timer_timeout"]
